# DarkGuard

./: EULA.md  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  app_status.css  main.tsx
src-tauri/: Cargo.toml  build.rs  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
