[package]
name = "DarkGuard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "darkguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
base64 = "0.22.1"
rand = "0.8.5"
which = "8.0.0"
tauri-plugin-notification = "2.3.3"

